--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 	<ul>
 		<li>Berlin</li>
 		<li>Boston</li>
-		<li>Hong Kong</li>
+		<li>chicago</li>
 		<li>London</li>
 		<li>Los Angeles</li>
 		<li>New York City</li>
