--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 		<li>New York City</li>
 		<li>San Francisco</li>
 		<li>Sydney</li>
-		<li>Washington D.C</li>
+		<li>Washington</li>
 	</ul>
 	</p>
 	<p>For more information, visit General Assembly's <a href='https://www.generalassemb.ly/'>website.</p>
