added end of link tagname

--- a/test.html
+++ b/test.html
@@ -18,6 +18,6 @@
 		<li>Washington</li>
 	</ul>
 	</p>
-	<p>For more information, visit General Assembly's <a href='https://www.generalassemb.ly/'>website.</p>
+	<p>For more information, visit General Assembly's <a href='https://www.generalassemb.ly/'>website.</a></p>
  </body>
 </html>
